# so-example-glarue

./: setup.cfg
myscript/data/: data_file_1
myscript/test_data/: test_data_file_1
