[metadata]
name = myscript
version = 1.0
description = An example for glarue
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/so-example-glarue
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:

[options.package_data]
myscript = data/*, test_data/*

[options.entry_points]
console_scripts =
    myscript = myscript.myscript:main
